--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ShockWallet LND Wizard</title>
+    <title>Groestlcoin ShockWallet LND Wizard</title>
     <link
       href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
       rel="stylesheet"
